tests/NormalTests/paczka1/fuzzy1/91446573.err
Error in line 6: LAAhu A1)2 76,0
Error in line 5: LAAhu S86 91,8
Error in line 21: UwPWQq S86 67,b
Error in line 17: UwPWQq S86 27,3
Error in line 18: LAAhu A142 64,6
Error in line 25: LAAhu A881 86,0
Error in line 23: qDxeHkMwsr0 A719 68,9
Error in line 36: fcHS2w2 S86 58,52
Error in line 32: A719 A142 338,6
